cmake_minimum_required(VERSION 3.12)
project(amd_arbpg_repros C)
set(CMAKE_C_STANDARD 11)

if(MSVC)
        add_compile_options(/W4)
else()
        add_compile_options(-Wall)
endif()

add_subdirectory(lib)
add_subdirectory(texunit_limit)
add_subdirectory(ret_crash)
add_subdirectory(branchcond_ignored)
add_subdirectory(fogcoord_swizzle)